@@ -4,10 +4,10 @@ python:
   - 3.6
   - 3.5
   - 3.4
-  - 3.3
   - 2.7
 
 env:
+  - DJANGO="Django>=2.0,<2.1"
   - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django>=1.9,<1.10"
@@ -27,6 +27,9 @@ matrix:
 
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
+
+   - python: 2.7
+     env: DJANGO="Django>=2.0,<2.1"
 
 
 after_success:
